k8s/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
spec:
  type: ClusterIP
  selector:
    app: auth
  ports:
  - name: http
    port: 80
    targetPort: 3000
