k8s/sandbox-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sandbox-service
spec:
  selector:
    app: sandbox-server
  type:  ClusterIP
  ports:
  - name:  main-sandbox-port
    port:  80 
    targetPort:  3000
